test/good/117.zlus
(* expression shorthand for automata *)
let node blah x = y where
  rec automaton
          | S1 -> do y = 0 until x then S2
          | S2 -> do y = 1 until x then S1
      end
